@@ -1,3 +1,9 @@
+2008-05-28  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* gst/adder/gstadder.c: (gst_adder_query_duration),
+	(gst_adder_query_latency), (gst_adder_query):
+	Implement latency query.
+
 2008-05-27  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* gst/adder/gstadder.c: (gst_adder_query_duration):
